2011-12-02  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (list): unquote and splice actions look inside the
	argument form. If an unquote or splice are applied to a quoted
	form, its quote becomes a regular quote.
	This behavior is necessary to make ,',form work in nested
	quotes, otherwise the ' is a quasiquote which captures
	the comma in ,form, reducing ,',form to ,form.

	* txr.1: Documented this special behavior.

2011-12-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand_qquote): Bugfix: removed bogus recognition
	and processing of regular quote form. This broke nested
	backquote processing, and quasiquote forms containing
	non-quasi-quotes like like '(a 'b ,c).

2011-11-20  Kaz Kylheku  <kaz@kylheku.com>

	Version 044

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2011-12-01  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Started Lisp documentation. Updated description of
	symbol syntax.

2011-12-01  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (int_str): Return nil rather than 0 if no digits are extracted
	at all.

2011-12-01  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (h_skip, h_coll, v_skip, v_collect): Evaluate the arguments.
	(do_txeval): Optimization: short-circuit out if the expression is nil,
	without establishing the exception handler.

2011-12-01  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_skip): Bugfix: Nov 12 commit caused regression:
	skip min/max arguments not working!

	* RELNOTES: Updated.

2011-12-01  Kaz Kylheku  <kaz@kylheku.com>

	Dropping the silly cons return value from txeval.
	Two interfaces are provided to the function. One throws
	on unbound variable, the other which evaluates them to the
	symbol noval_s (used in exception handling).

	* match.c (do_txeval): New static function.
	(txeval): Functionality moved to do_txeval.
	(txeval_allow_ub): New static function.
	(vars_to_bindings, h_fun, v_freeform, v_next, v_merge, v_bind, v_set,